--- a/src/styles.css
+++ b/src/styles.css
@@ -141,6 +141,11 @@ body{
     font-weight: 600;
 }
 
+/* .btn:hover {
+    background-color: #FF7E20;
+    color: #fff;
+} */
+
 .btn:hover{
     background:var(--main-color);
 }
