Testing asset image

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -72,7 +72,7 @@
 
     <div class="row">
       <div class="image">
-        <img src="https://github.com/rohithchandra420/mso-ui/blob/main/src/assets/aboutimg.png?raw=true" alt="">
+        <img src="assets/aboutimg.png" alt="">
       </div>
       <div class="content">
         <h3>MAKE SOME Oछा WITH US</h3>
