Using asset img

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary" class="header">
-  <img src="https://raw.githubusercontent.com/rohithchandra420/mso-ui/main/src/assets/logo.png" class="headlogo">
+  <img src="assets/logo.png" class="headlogo">
   <a href="#" routerLink="/dashboard" class="logo"><span>MAKE SOME O</span>छा</a>
 
   <div class="spacer"></div>
