Cosemetic changes - created banner in shop

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -190,14 +190,14 @@
   <!-- gallery end -->
 
   <!-- price section start` -->
-  <section class="price" id="price">
+  <!-- <section class="price" id="price">
     <h1 class="heading"> EARLY BIRD TICKETS LIVE<span> now</span></h1>
 
     <div class="box-container">
 
       <div class="box">
         <h3 class="title"> FESTIVAL PASS</h3>
-        <h3 class="amount">Rs.999/-</h3>
+        <h3 class="amount">&#x20b9; 999/-</h3>
         <ul>
           <li><i class="fas fa-check"></i>Oछा Jamming</li>
           <li><i class="fas fa-check"></i>Open Mic</li>
@@ -233,7 +233,7 @@
         <a href="#" class="btn">BOOK NOW</a>
       </div>
     </div>
-  </section>
+  </section> -->
   <!-- price end` -->
 
   <!-- review start -->
