--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -30,7 +30,7 @@
             <mat-card-header>
                 <div mat-card-avatar class="product-header-image"></div>
                 <mat-card-title>{{product.name}}</mat-card-title>
-                <mat-card-subtitle>Rs. {{product.price}}</mat-card-subtitle>
+                <mat-card-subtitle>&#x20b9; {{product.price}}</mat-card-subtitle>
             </mat-card-header>
             <!-- <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg"
                     alt="Photo of a Shiba Inu"> -->
