--- a/src/app/shop/shop.component.css
+++ b/src/app/shop/shop.component.css
@@ -1,4 +1,29 @@
-.btn{
+/* .banner-container {
+    width: 100%;
+    height: 150px;
+    background-image: url('../../assets/vineeth-banner.jpeg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+} */
+
+.banner-container {
+    width: 100%;
+    height: 150px; /* Set the desired height of your banner */
+    position: relative;
+    overflow: hidden; /* Ensures the image does not overflow the container */
+}
+
+.banner-container img {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+.btn {
     margin-top: 1rem;
     display: inline-block;
     padding: .8rem 3rem;
@@ -10,8 +35,8 @@
     font-weight: 600;
 }
 
-.btn:hover{
-    background:var(--main-color);
+.btn:hover {
+    background: var(--main-color);
 }
 
 .btn-secondary {
@@ -26,6 +51,18 @@
     background: none;
 }
 
+/* .product-card {
+    position: relative;
+    width: 100%;
+    height: 400px;
+    margin-bottom: 15px;
+    border: 2px solid orange;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px 0 rgba(255, 153, 0, 0.2), 0 6px 20px 0 rgba(255, 153, 0, 0.19);
+    background-image: url(../../assets/vineeth-banner.jpeg);
+    background-size: cover;
+    background-position: center;
+} */
 
 .product-card {
     max-width: 100%;
@@ -33,13 +70,13 @@
     border: 2px solid orange;
     border-radius: 10px;
     box-shadow: 0 4px 8px 0 rgba(255, 153, 0, 0.2), 0 6px 20px 0 rgba(255, 153, 0, 0.19);
-    background-color: #000;
+    background-image: url(../../assets/vineeth-banner.jpeg);
 }
 
 .product-card mat-card-title {
     color: #fff;
 }
-  
+
 .product-header-image {
     background-image: url('../../assets/logo.png');
     background-size: cover;
@@ -51,14 +88,15 @@
     word-wrap: break-word;
 }
 
-.summary-step{ 
+.summary-step {
     display: flex;
     justify-content: center;
 }
 
 .success-card {
     color: #fff;
-    background: #fff;margin-bottom: 10px;
+    background: #fff;
+    margin-bottom: 10px;
     background: rgb(0, 126, 0);
     border-radius: 15px;
     box-shadow: 0 10px 10px 0 rgba(132, 248, 132, 0.2), 0 15px 30px 0 rgba(140, 255, 140, 0.19);
@@ -77,7 +115,8 @@
 
 .failed-card {
     color: #fcfcfc;
-    background: #ce0707;margin-bottom: 10px;
+    background: #ce0707;
+    margin-bottom: 10px;
     border: 3px solid rgb(172, 14, 14);
 }
 
@@ -119,7 +158,35 @@ mat-card-actions input {
     color: #fff;
     font-size: medium;
 }
-  
+
 .qrcodeImage {
     padding-left: 20%;
+}
+
+.price-label {
+    color: #FF7E20;
+    font-size: 20px;
+}
+
+.confirmation-card {
+    color: #fff;
+    background: #000;
+    margin-bottom: 10px;
+    border-radius: 15px;
+    box-shadow: 0 10px 10px 0 rgba(132, 248, 132, 0.2), 0 15px 30px 0 rgba(140, 255, 140, 0.19);
+}
+
+.confirmation-card .list-group-item {
+    background: #000;
+    color: #fff;
+    font-weight: 400;
+}
+
+.confirmation-header-image {
+    background-image: url('../../assets/logo.png');
+    background-size: cover;
+}
+
+.confirmation-card-footer {
+    padding: 16px;
 }
