--- a/src/app/tickets/ticket.details.popup/ticket.details.popup.html
+++ b/src/app/tickets/ticket.details.popup/ticket.details.popup.html
@@ -8,7 +8,7 @@
     <p>Payment Id: {{ticketDetails.paymentId}}</p>
     <p>Total Amount : Rs. {{ticketDetails.amount}}</p>
     <div class="shop-items" *ngFor="let prodItem of ticketDetails.shopCart ">
-        <div class="shop-item-label">{{ prodItem.name }} - Rs. {{ prodItem.price }}</div>
+        <div class="shop-item-label">{{ prodItem.name }} - &#x20b9; {{ prodItem.price }}</div>
         <!-- <button mat-raised-button color="primary" (click)="onAdmit(prodItem)" [disabled]="prodItem.status != 'New'">Admit</button> -->
     </div>
     <p>Purchased At: {{ticketDetails.createdAt}}</p>
