--- a/src/app/tickets/tickets.component.html
+++ b/src/app/tickets/tickets.component.html
@@ -65,6 +65,12 @@
                 <th mat-header-cell *matHeaderCellDef> Amount </th>
                 <td mat-cell *matCellDef="let element"> {{element.amount}} </td>
             </ng-container>
+
+            <!-- Created At Column -->
+            <ng-container matColumnDef="createdAt">
+                <th mat-header-cell *matHeaderCellDef> Booked At </th>
+                <td mat-cell *matCellDef="let element"> {{element.createdAt | utcToLocalTime}} </td>
+            </ng-container>
     
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row (click)="openTicketDetails(row)" *matRowDef="let row; columns: displayedColumns;"></tr>
